# Neural_Network_Cuda

./: .gitignore  CMakeLists.txt  README.md  build_library.sh  main.cpp
include/: Layer.h  Network.h  Network_functions.cuh  matrice.h  matrice_gpu.cuh  matrice_gpu.h  matrice_helper.cuh
src/: Network.cpp  Network_functions.cu  matrice.cpp  matrice_gpu.cpp  matrice_gpu.cu  matrice_helper.cu
